--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 砚知
-subtitle: '水墨画出的程序员'
+title: 砚知的webstack
+subtitle: ''
 description: ''
 keywords:
 author: inkstone
