--- a/_config.webstack.yml
+++ b/_config.webstack.yml
@@ -28,32 +28,36 @@ githubCorner: '<a href="https://github.com/XAihan" class="github-corner" aria-la
 
 expandAll: false
 menu:
-  - name: 常用工具
+  - name: 个人项目
     icon: far fa-star
-    config: hotTools
+    submenu: 
+      - name: 滑动的时钟
+        icon: fas fa-blog
+        config: scrollerClock
+      - name: 我的博客
+        icon: fas fa-blog
+        config: myBlog
   - name: 其他工具
     icon: fas fa-tools
     submenu:
       - name: 开发工具
         icon: fas fa-tools
         config: devTools
-      - name: 我的博客
-        icon: fas fa-blog
-        config: myBlog
 
+scrollerClock:
+  - name: scroller
+    img: /images/logos/github.png
+    url: 'https://xaihan.github.io/scrollerNumber/#/'
+    description: 根据wallpaper壁纸制作的同款滑动时钟
 testPage:
   - name: Child Page
     url: /child
     img: /images/logos/myblog.png
     description: 子页面测试
 devTools:
-  - name: Github
-    url: https://github.com/
-    img: /images/logos/github.png
-    description: 面向开源及私有软件项目的托管平台。
-  - name: Github
-    url: https://github.com/
-    img: /images/logos/github.png
+  - name: Vue3 One Piece
+    url: https://www.vue3js.cn/
+    img: /images/vue3.png
     description: 面向开源及私有软件项目的托管平台。
 
 myBlog:
